# EffectiveMobileTestTask

./: .env  .test.env  README.md  pyproject.toml  pytest.ini
src/: config.py  history.csv  main.py
src/financial_operations/: financial_manager.py  transaction_manager.py
src/interface/: menus.py
src/utils/: decorators.py  file_operations.py
tests/: test_transaction.py
