[tool.poetry]
name = "effectivemobiletask"
version = "0.1.0"
description = ""
authors = ["frank <frank.danil704@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
pytest-dotenv = "^0.5.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
